--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -52,13 +52,9 @@ html(lang='ru')
                     const htmlElement = document.documentElement;
                     const firstChildNodeH = htmlElement.firstChild;
                     const lastChildNodeH = htmlElement.lastChild;
-                    //- console.log("htmlElement___" + htmlElement);
-                    //- console.log("firstChildNodeH" + firstChildNodeH);
-                    //- console.log("lastChildNodeH" + lastChildNodeH);
-
-                    let x = 10;
-                    x = x * 120;
-                        console.log(x);
+                    console.log("htmlElement___" + htmlElement);
+                    console.log("firstChildNodeH" + firstChildNodeH);
+                    console.log("lastChildNodeH" + lastChildNodeH);
 
                     const headElement = document.head;
                     const firstChildNodeHd = headElement.firstChild;
