--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -52,7 +52,7 @@ html(lang='ru')
                     const htmlElement = document.documentElement;
                     const firstChildNodeH = htmlElement.firstChild;
                     const lastChildNodeH = htmlElement.lastChild;
-                    console.log("htmlElement___" + htmlElement);
+                    //- console.log("htmlElement___" + htmlElement);
                     console.log("firstChildNodeH" + firstChildNodeH);
                     console.log("lastChildNodeH" + lastChildNodeH);
 
