--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -53,8 +53,12 @@ html(lang='ru')
                     const firstChildNodeH = htmlElement.firstChild;
                     const lastChildNodeH = htmlElement.lastChild;
                     //- console.log("htmlElement___" + htmlElement);
-                    console.log("firstChildNodeH" + firstChildNodeH);
-                    console.log("lastChildNodeH" + lastChildNodeH);
+                    //- console.log("firstChildNodeH" + firstChildNodeH);
+                    //- console.log("lastChildNodeH" + lastChildNodeH);
+
+                    let x = 10;
+                    x = x * 120;
+                    console.log(x);
 
                     const headElement = document.head;
                     const firstChildNodeHd = headElement.firstChild;
