--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -22,6 +22,10 @@
     visibility: hidden;
 }
 
+#userButtonTest {
+    width: 100%;
+}
+
 #test {
     $font_family_1: "helvetica neue", helvetica, arial, sans-serif;
     $font_family_2: "Faster One", cursive;
