--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -58,6 +58,9 @@
             text-align: center;
         }
     }
+    .row {
+        margin: 20px 0px;
+    }
 
     // section {
     //     article {
