--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -25,7 +25,7 @@ html(lang='ru')
                 .row
                     .col
                         .form-check.form-switch
-                            input#flexSwitchCheckDefault.form-check-input(onclick='disableButton1()' type='checkbox')
+                            input#flexSwitchCheckDefault1.form-check-input(onclick='disableButton1()' type='checkbox')
                             label.form-check-label(for='flexSwitchCheckDefault1')
                                 | тесты <b>все подряд</b> или по одному
                     .col 
