--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -51,6 +51,7 @@ html(lang='ru')
 
             section#bottom
                 p результаты:
+                h1.rezult
 
     //- #pageWrapper.page-wrapper
     
