--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,4 +1,4 @@
-footer.page-footer.font-small.blue(style='width: 100%')
+footer.footer.page-footer.font-small.blue(style='width: 100%')
   section.footer-copyright.text-center.py-3
     hr
     p добавляю проверку правильности и вывод результатов теста 
