--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -1,6 +1,37 @@
 /*
  *  File: test.scss
  */
+//index
+// вкл flex и формируем размеры 
+html, body{
+    height: 100%;
+}
+body{
+    display: flex;
+    flex-direction: column;
+}
+header{
+    /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
+    flex: 0 0 auto;
+ }
+ .container{
+    /* 1 flex-grow, 0 flex-shrink, auto flex-basis */
+    flex: 1 0 auto;
+ }
+.footer{
+    /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
+    flex: 0 0 auto;
+    flex-shrink: 0;
+ }
+// .footer {
+//         position: absolute;
+//         left: 0;
+//         bottom: 0;
+//         width: 100%;
+//         height: 80px;
+//       }
+
+
 #autorization {
     font-size: 20px;
     text-align: center;
