--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -16,13 +16,17 @@ header{
  }
  .container{
     /* 1 flex-grow, 0 flex-shrink, auto flex-basis */
-    flex: 1 0 auto;
+    // flex: 1 0 auto;
+    min-height: calc(80vh - 70px);
  }
 .footer{
     /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
-    flex: 0 0 auto;
-    flex-shrink: 0;
- }
+    // flex: 0 0 auto;
+    // flex-shrink: 0;
+    // height: 50px;
+    // bottom: 0;
+}
+
 // .footer {
 //         position: absolute;
 //         left: 0;
@@ -41,6 +45,7 @@ header{
     border-radius: 15px;
 }
 #hidden {
+    //test 
 }
 /* Вырубает 
 .cut-down {*/
