--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,7 +1,7 @@
 footer.footer.page-footer.font-small.blue(style='width: 100%')
   section.footer-copyright.text-center.py-3
     hr
-    p добавляю проверку правильности и вывод результатов теста 
+    p  сейчас делаю: вывод тестов в случайном порядке и по одному 
   hr
   .footer-copyright.text-center.py-3 © 2021 Copyright 
     b Musa
