--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -23,17 +23,9 @@ header{
     /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
     // flex: 0 0 auto;
     // flex-shrink: 0;
-    // height: 50px;
+    height: 50px;
     // bottom: 0;
 }
-
-// .footer {
-//         position: absolute;
-//         left: 0;
-//         bottom: 0;
-//         width: 100%;
-//         height: 80px;
-//       }
 
 
 #autorization {
