changed-button_click, fix-checker_start

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,7 +1,8 @@
 footer.footer.page-footer.font-small.blue(style='width: 100%')
-  section.footer-copyright.text-center.py-3
+  section.footer-copyright.text-center.py-2
     hr
-    p  сейчас делаю: вывод тестов в случайном порядке и по одному 
+    p  сейчас делаю: вывод тестов  по одному 
+    p сломал парковочный ответ(0), пока вывожу алерт
   hr
   .footer-copyright.text-center.py-3 © 2021 Copyright 
     b Musa
