--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -50,8 +50,12 @@ header{
     visibility: hidden;
 }
 
-#userButtonTest {
+#btnCheckTest {
     width: 100%;
+}
+
+.red {
+    color: red;
 }
 
 #test {
