--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -24,11 +24,12 @@ html(lang='ru')
                 .row
                     .col
                         .form-check.form-switch
-                            input#flexSwitchCheckDefault1.form-check-input(onclick='oneMoreButton()' type='checkbox')
-                            label.form-check-label(for='flexSwitchCheckDefault1')
+                            //- input#checkOneAll.form-check-input(onclick='oneMoreButton()' type='checkbox')
+                            input#checkerOneAll.form-check-input( type='checkbox')
+                            label.form-check-label(for='checkerOneAll')
                                 | тесты <b>все подряд</b> или по одному
                     .col 
-                        .form-check.form-switch.red#autorize
+                        .form-check.form-switch.red#checkerAutorize
                             input#flexSwitchCheckDefault.form-check-input( type='checkbox')
                             label.form-check-label(for='flexSwitchCheckDefault')
                                 | <b> авторизоваться</b> , чтобы пройти тесты
@@ -56,7 +57,7 @@ html(lang='ru')
         //- #pageWrapper.page-wrapper
 
         //- тест промисов- удалить
-        button#run Новая попытка
+        button#run(onclick='loadJson()' type='button') Новая попытка
         #result 
     
         include components/footer.pug
