--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -26,7 +26,7 @@ html(lang='ru')
                         .form-check.form-switch
                             //- input#checkOneAll.form-check-input(onclick='oneMoreButton()' type='checkbox')
                             input#checkerOneAll.form-check-input( type='checkbox')
-                            label.form-check-label(for='checkerOneAll')
+                            label#labelOneAll.form-check-label(for='checkerOneAll')
                                 | тесты <b>все подряд</b> или по одному
                     .col 
                         .form-check.form-switch.red#checkerAutorize
