--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -27,7 +27,7 @@ html(lang='ru')
                             //- input#checkOneAll.form-check-input(onclick='oneMoreButton()' type='checkbox')
                             input#checkerOneAll.form-check-input( type='checkbox')
                             label#labelOneAll.form-check-label(for='checkerOneAll')
-                                | тесты <b>все подряд</b> или по одному
+                                | вопросы <b>все подряд</b> или по одному
                     .col 
                         .form-check.form-switch.red#checkerAutorize
                             input#flexSwitchCheckDefault.form-check-input( type='checkbox')
