--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -29,7 +29,7 @@ html(lang='ru')
                             label#labelOneAll.form-check-label(for='checkerOneAll')
                                 | вопросы <b>все подряд</b> или по одному
                     .col 
-                        .form-check.form-switch.red#checkerAutorize
+                        .form-check.form-switch.red#checkerAutorise
                             input#flexSwitchCheckDefault.form-check-input( type='checkbox')
                             label.form-check-label(for='flexSwitchCheckDefault')
                                 | <b> авторизоваться</b> , чтобы пройти тесты
