--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -52,7 +52,7 @@ html(lang='ru')
 
             section#bottom
                 p результаты:
-                h1.rezult
+                h1.result
 
         //- #pageWrapper.page-wrapper
 
