--- a/src/pug/testAdmin.pug
+++ b/src/pug/testAdmin.pug
@@ -47,7 +47,8 @@ html(lang='ru')
                 p +
                 
             .col
-                div#btnCheckTest.btn.btn-success( type='button' disabled='true')
+                div
+                   button#btnCheckTest.btn.btn-success( type='button' disabled='true')
                     | ТЕСТ
 
             section#bottom
